--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
       crossorigin="anonymous"
     ></script>
 
-    
     <title>Toksills learn</title>
-
   </head>
 
   <body>
@@ -55,7 +53,8 @@
               <div>
                 <img
                   style="width: 100%; border-radius: 12px"
-                  src="/s/pages/assets/images/h1hH23danimationcover.jpg" alt="Photo"
+                  src="/s/pages/assets/images/h1hH23danimationcover.jpg"
+                  alt="Photo"
                 />
               </div>
               <div style="border-bottom: 1px solid #e7e9eb">
@@ -142,7 +141,8 @@
               <div>
                 <img
                   style="width: 100%; border-radius: 12px"
-                  src="/s/pages/assets/images/h1hH23danimationcover.jpg" alt="Photo"
+                  src="/s/pages/assets/images/h1hH23danimationcover.jpg"
+                  alt="Photo"
                 />
               </div>
               <div style="border-bottom: 1px solid #e7e9eb">
@@ -229,7 +229,8 @@
               <div>
                 <img
                   style="width: 100%; border-radius: 12px"
-                  src="/s/pages/assets/images/h1hH23danimationcover.jpg" alt="Photo"
+                  src="/s/pages/assets/images/h1hH23danimationcover.jpg"
+                  alt="Photo"
                 />
               </div>
               <div style="border-bottom: 1px solid #e7e9eb">
@@ -324,8 +325,8 @@
                 border-radius: 22px;
               "
             >
-            Design
-        </div>
+              Design
+            </div>
           </div>
         </div>
       </div>
